--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start" : "nodemon backend/server.js"
+    "start": "nodemon backend/server.js"
   },
   "author": "kevan_mehta",
   "license": "ISC",
@@ -14,6 +14,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.3",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "react-notification-badge": "^1.5.1"
   }
 }
