--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.3",
     "nodemon": "^3.0.1",
-    "react-notification-badge": "^1.5.1"
+    "react-notification-badge": "^1.5.1",
+    "socket.io": "^4.7.2"
   }
 }
