--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,7 +31,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "npm install --force",
+    "build": "npm install --force && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
