--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,10 +1,10 @@
 {
     "version": 2,
     "builds": [
-      {
-        "src": "index.js",
-        "use": "@vercel/node"
-      }
+      { "src": "build/**", "use": "@vercel/static" }
+    ],
+    "routes": [
+      { "handle": "filesystem" },
+      { "src": "/(.*)", "dest": "build/index.html" }
     ]
   }
-  
